--- a/TODO.tex
+++ b/TODO.tex
@@ -1,18 +1,16 @@
 
-\chapter{TODO AND REMOVE}
-
 
 
 SAT Theory NP complete Cite [COOK 71]
 
 Used In\\
-- Formal methods Hardware model checking;Software model checing;
+- Formal methods Hardware model checking;Software model checking;
 Termination analysis of term-rewrite systems ; Test pattern generation 
 (testing of software hardware) ; etc\\
-- AI planning, game n queen sudou \\
-- Bio info Haplotype inference ; Pedigree checing ; Analysis of Genetic; Regulatory Networs; etc.\\
-- Design Automation: Equivalence checing; Delay computation; Fault diagnosis;Noise analysis ; etc\\
-- Security: Cryptanalysis ; Inversion attacs on hash functions; etc
+- AI planning, game n queen sudoku \\
+- Bio info Haplotype inference ; Pedigree checking ; Analysis of Genetic; Regulatory Networks; etc.\\
+- Design Automation: Equivalence checking; Delay computation; Fault diagnosis ; etc\\
+- Security: Cryptanalysis ; Inversion attacks on hash functions; etc
 
 
 Where can found \\
