--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 \usepackage{ifthen}
 \usepackage{nicefrac}
 \PassOptionsToPackage{hyphens}{url}
+\usepackage[a-1b]{pdfx}
 \usepackage{hyperref}
 \usepackage{balance}
 %\usepackage{cite}
@@ -22,6 +23,7 @@
 \usepackage{amsthm}
 \usepackage{dsfont}
 \usepackage{cleveref}
+\usepackage{enumitem}
 \usepackage[vlined,linesnumbered,boxed]{algorithm2e}
 
 
