--- a/title.tex
+++ b/title.tex
@@ -14,7 +14,7 @@
   \tikz[remember picture]\node (titleborderup) {};\\
   {\color{darkgray}Informatique, Télécommunication et \'Electronique}
   \vspace{1cm}\\
-  \textbf{\Large{}Thèse de doctorat de l'Université Sorbonne Univervité}
+  \textbf{\Large{}Thèse de doctorat de l'Université Sorbonne Université}
   \vspace{1cm}\\
   \large{}Spécialité : \textbf{\Large{}Ingénierie / Systèmes Informatiques}
   \vspace{1cm}\\
