--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -179,7 +179,8 @@ So, a \emph{permutation group} is a subgroup of \Group($X$).
 A permutation group $G$ induces a \emph{equivalence relation} on the set of element $X$ being
 permuted. Two elements $x_1, x_2 \in X$ are equivalent if there exists a permutation $g \in G$ such that
 $g x_1 = x_2$. Then equivalence relation partitions $X$ into \emph{equivalence classes} referred to
-as the \emph{orbits} of $X$ under $G$.
+as the \emph{orbits} of $X$ under $G$. The orbit of an element $x$ under group $G$ (or simply orbit of $x$ when clear
+from the context) is the set $[x]_G = \{g.x \mid g \in G\}$
 
 
 
