--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -32,13 +32,12 @@ $m$ clauses and $l$ literals over $n$ variables, the graph is constructed as fol
 \end{itemize}
 
 An optimization of this graph is possible with the usage of binary clauses i.e. a clause with only two literals.
-The clause node can be omitted and we connect the two literals. 
+The clause node can be omitted and we connect the two literals. Because the edges has no colors, we must check
+if the produced permutations are spurious. To do 
 
 \hakan{optimisation du graph}\\
-
 \hakan{creation d'un probleme fil conducteur and utilisation de celui dans chaque partie, du calcul des symétries
 jusqu'au SBP}\\
-
 \hakan{example of graph}\\
 
  
