--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -6,6 +6,10 @@
 
 \newcommand{\result}[1]{#1}
 
+\newtheorem{definition}{Definition}{\bfseries}{\itshape}
+\newtheorem{proposition}{Proposition}{\bfseries}{\itshape}
+\newtheorem{theorem}{Theorem}{\bfseries}{\itshape}
+
 %%% Common abbreviations ======================================================
 \usepackage{hyphenat}
 
