--- a/main.bib
+++ b/main.bib
@@ -1,3 +1,6 @@
+
+% Dynamic Symmetry breaking approches
+
 @inproceedings{metin2018cdclsym,
   title={CDCLSym: Introducing Effective Symmetry Breaking in SAT Solving},
   author={Metin, Hakan and Baarir, Souheib and Colange, Maximilien and Kordon, Fabrice},
@@ -8,6 +11,21 @@
 }
 
 
+@inproceedings{Devriendt12,
+	author    = {Jo Devriendt and
+	Bart Bogaerts and
+	Broes de Cat and
+	Marc Denecker and
+	Christopher Mears},
+	title     = {Symmetry Propagation: Improved Dynamic Symmetry Breaking in {SAT}},
+	booktitle = {{IEEE} 24th International Conference on Tools with Artificial Intelligence,
+	{ICTAI} 2012, Athens, Greece, November 7-9, 2012},
+	pages     = {49--56},
+	year      = {2012}
+	
+}
+
+% == 
 @book{rossi2006handbook,
 	title={Handbook of constraint programming},
 	author={Rossi, Francesca and Van Beek, Peter and Walsh, Toby},
@@ -82,4 +100,33 @@
 	year={2003},
 	institution={Technical Report TR-CS-9002, Australian National University}
 }
+
+@article{Luks2004,
+	author    = {Eugene M. Luks and
+	Amitabha Roy},
+	title     = {The Complexity of Symmetry-Breaking Formulas},
+	journal   = {Ann. Math. Artif. Intell.},
+	volume    = {41},
+	number    = {1},
+	pages     = {19--45},
+	year      = {2004},
+	url       = {https://doi.org/10.1023/B:AMAI.0000018578.92398.10},
+	doi       = {10.1023/B:AMAI.0000018578.92398.10},
+	timestamp = {Tue, 26 Dec 2017 18:09:59 +0100},
+	biburl    = {http://dblp.org/rec/bib/journals/amai/LuksR04},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
+@article{aloul06,
+	author    = {{Fadi A.} Aloul and {Karem A.} Sakallah and {Igor L.} Markov},
+	title     = {Efficient Symmetry Breaking for Boolean Satisfiability},
+	journal   = {{IEEE} Trans. Computers},
+	volume    = {55},
+	number    = {5},
+	pages     = {549--558},
+	year      = {2006}
+}
+
+
 
