--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,6 @@
 \usepackage{balance}
 %\usepackage{cite}
 \usepackage{ccicons}
-\usepackage{hyperref}
 \usepackage{soul}
 \usepackage{amsfonts}
 \usepackage{amsmath,amssymb}
@@ -86,6 +85,7 @@
 \input{introduction}
 \input{preliminaries}
 \input{symmetryinsat}
+\input{cosy}
 \input{conclusion}
 
 \balance
