--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -37,9 +37,20 @@ otherwise the formula is \emph{unsatisfiable} (\unsat).
 
 \subsection{Algorithm}
 
+A naive approach to solve a SAT problem is to try all possible assignments. In total,
+for a proposition formula with $n$ variables, it leads to $2^n$ assignments and is intractable
+even for a formula with few variables.
+One the first non memory intensive algorithm to solve the SAT problems is the Davis Putnam Logemann Loveland (DPLL) algorithm. This algorithm introduce the \emph{unit propagation}.
+This principle force the value of a literal when a clause is \emph{assertive}, i.e. 
+has all literals to false and one unassigned.
+
+
+\hakan{Insert algorithm DPLL}
+
+
 The state of the art sound and complete algorithm to resolve a SAT problem is 
 Conflict-Driven Clause learning (CDCL) algorithm~\ref{algo:cdcl}.
-This algorithm is inspired by Davis Putnam Logemann Loveland \cite{dpll_62}.
+This algorithm is inspired by Davis Putnam Logemann Loveland (DPLL) algorithm \cite{dpll_62}.
 
 
 The CDCL algorithm walks a binary search tree.  It first applies unit propagation to
