--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 \usepackage{enumitem}
 \usepackage{listings}
 \usepackage[vlined,linesnumbered,boxed]{algorithm2e}
-
+\usepackage{times}
 
 %%% Colors ====================================================================
 \definecolor{phdcol0}{RGB}{0,47,107}
