--- a/style.tex
+++ b/style.tex
@@ -36,3 +36,6 @@
 \settypeblocksize{634pt}{448.13pt}{*}
 \setlength{\parindent}{0in}
 \nonzeroparskip
+
+%%% Change font
+% \renewcommand{\familydefault}{\sfdefault}
