--- a/cosy.tex
+++ b/cosy.tex
@@ -143,7 +143,7 @@ is a refinement of the classical concept of \textit{sbp} defined in
 satisfiability.
 
 \begin{theorem}[Satisfiability preservation]
-	Let $\varphi$ be a formula and $\psi$ an \textit{ebsp} for some assignment $\alpha$ under $g \in S(\varphi)$. Then,
+	Let $\varphi$ be a formula and $\psi$ an \textit{esp} for some assignment $\alpha$ under $g \in S(\varphi)$. Then,
 	$$\varphi~and ~\varphi \wedge \psi \text{ are equi-satisfiable}.$$
 \end{theorem}
 
@@ -156,3 +156,6 @@ satisfiability.
 	$\beta \models \psi$.
 	
 \end{proof}
+
+
+\section{Experiments}
